# monorepo

./: .bazelrc  .clang-tidy  .gitignore  .gitlint  .gitmessage  .golangci.yml  .npmrc  .pre-commit-config.yaml  .yamlfmt.yaml  .yamllint.yaml  BUILD  Cargo.toml  LICENSE  MODULE.bazel  README.md  defs.bzl  devenv.nix  devenv.yaml  flake.nix  go.work  go.work.sum  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  shell.nix
.github/workflows/: main.yml
bazel/: java_runtime_layer.bzl  py_image_layer_owned.bzl
devenv/: devenv.nix  devenv.yaml
justfiles/: README.md  common.just  cpp.just
makefiles/: _common.mk  _cpp.mk  _go.mk  _python.mk  _rust.mk
projects/cpp/abseil/: BUILD  abseil_example.cpp  abseil_example.h  abseil_example_test.cpp  main.cpp
projects/cpp/approval/: BUILD  googletest_starter_main.cpp  googletest_starter_test.cpp
projects/cpp/fmt_adapters/: BUILD  pistache.h
projects/cpp/greeter/: BUILD  greeter.cpp  greeter.h  greeter_test.cpp  justfile
projects/cpp/hello_world/: BUILD  hello_world.cpp
projects/cpp/nlohmann_json/: BUILD  Makefile  json_generator.cpp  json_generator.h  json_generator_test.cpp  main.cpp
projects/cpp/openssl/: BUILD  main.cpp  ssl_checker.cpp  ssl_checker.h  ssl_checker_test.cpp
projects/cpp/pistache/: BUILD  main.cpp
projects/cpp/rapidjson/: BUILD  json_generator.cpp  json_generator.h  json_generator_test.cpp  main.cpp
projects/cpp_hello_world/: BUILD  backup.BUILD  hello_world.cpp
projects/cpp_hello_world_lib/: BUILD  greeter.cpp  greeter.h  greeter_test.cpp
projects/go/hello_world/: BUILD  go.mod  hello_world.go  hello_world_test.go
projects/go/web/: BUILD  go.mod  main.go
projects/go_hello_world/: BUILD  go.mod  hello_world.go  hello_world_test.go
projects/go_learn_go_with_tests/arrays/: BUILD  go.mod  sum.go  sum_test.go
projects/go_learn_go_with_tests/concurrency/: BUILD  check_websites.go  go.mod
projects/go_learn_go_with_tests/context/: BUILD  context.go  go.mod
projects/go_learn_go_with_tests/dependency_injection/: BUILD  di.go  go.mod
projects/go_learn_go_with_tests/hello_world/: BUILD  Makefile  go.mod  hello.go  hello_test.go
projects/go_learn_go_with_tests/integers/: BUILD  adder.go  go.mod
projects/go_learn_go_with_tests/iteration/: BUILD  go.mod  repeat_test.go
projects/go_learn_go_with_tests/maps/: BUILD  dictionary.go  dictionary_test.go  go.mod
projects/go_learn_go_with_tests/mocking/: BUILD  countdown_test.go  go.mod  main.go
projects/go_learn_go_with_tests/pointers/: BUILD  go.mod  wallet.go  wallet_test.go
projects/go_learn_go_with_tests/reflection/: BUILD  go.mod  reflection.go  reflection_test.go
projects/go_learn_go_with_tests/roman_numerals/: BUILD  go.mod
projects/go_learn_go_with_tests/select/: BUILD  go.mod  racer.go  racer_test.go
projects/go_learn_go_with_tests/structs/: BUILD  go.mod  shapes.go  shapes_test.go
projects/go_learn_go_with_tests/sync/: BUILD  go.mod  sync.go  sync_test.go
projects/go_quiz/: BUILD  Makefile  README.md  go.mod  main.go
projects/go_web/: BUILD  go.mod  main.go
projects/java/greeter/: BUILD
projects/java/hello_world/: BUILD
projects/java_hello_world/: BUILD
projects/js/first/: BUILD  package.json
projects/js/greeter/: BUILD  greeter.test.mjs  package.json
projects/js/hello_world/: BUILD  package.json
projects/js/modern_javascript_tutorial/: README.md
projects/js/second/: BUILD  package.json
projects/js_first/: package.json
projects/js_hello_world/: BUILD  package.json
projects/js_hello_world/src/: hello.mjs
projects/js_hello_world_lib/: BUILD  greeter.mjs  package.json
projects/js_two/: BUILD  package.json
projects/js_two/src/: lib.js
projects/perl/fibonacci/: BUILD  fibonacci.pm  fibonacci_test.t
projects/perl/hello_world/: BUILD  Makefile  hello_world.pl  justfile
projects/python_calculator/: BUILD  __init__.py  calculator.py  calculator_test.py
projects/python_web/: BUILD  main.py
projects/rust_hello_world/: BUILD
projects/rust_hello_world_lib/: BUILD
projects/tcl_hello_world/: BUILD.disabled
projects/tcl_hello_world_lib/: BUILD  greet.tcl  pkgIndex.tcl
tools/lint/: BUILD  linters.bzl  pydoclint_wrapper.py
(+274 files in other folders)
