"""Multi-language Bazel Monorepo example"""

module(
    name = "monorepo",
    version = "0.0.0",
)

# keep-sorted start
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_lib", version = "3.2.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_perl", version = "0.5.0")
# keep-sorted end

# keep-sorted start
include("//third_party/containers:containers_deps.MODULE.bazel")
include("//third_party/cpp:cpp_deps.MODULE.bazel")
include("//third_party/golang:go_deps.MODULE.bazel")
include("//third_party/java:java_deps.MODULE.bazel")
include("//third_party/javascript:javascript_deps.MODULE.bazel")
include("//third_party/python:python_deps.MODULE.bazel")
include("//third_party/rust:rust_deps.MODULE.bazel")
include("//third_party/tcl:tcl_deps.MODULE.bazel")
# keep-sorted end

repos = use_extension("@rules_perl//perl:extensions.bzl", "perl_repositories")
use_repo(
    repos,
    "perl_darwin_amd64",
    "perl_darwin_arm64",
    "perl_linux_amd64",
    "perl_linux_arm64",
    "perl_windows_x86_64",
)

register_toolchains(
    "@rules_perl//perl:perl_darwin_arm64_toolchain",
    "@rules_perl//perl:perl_darwin_amd64_toolchain",
    "@rules_perl//perl:perl_linux_amd64_toolchain",
    "@rules_perl//perl:perl_linux_arm64_toolchain",
    "@rules_perl//perl:perl_windows_x86_64_toolchain",
)
